--- a/views/home.ejs
+++ b/views/home.ejs
@@ -55,7 +55,7 @@
             </li>
             </li>
             
-            <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="/login" style="color:white;">Login</a>
+            <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="/auth/google" style="color:white;">Login</a>
             </li>
 
         </ul>
@@ -288,7 +288,7 @@
                     <div class="d-flex flex-column align-items-center">
                         <div class="icon-contact mb-3"><i class="fas fa-mobile-alt"></i></div>
                         <div class="text-muted">Contact Number</div>
-                        <div class="lead font-weight-bold">(0751) 91827 36455</div>
+                        <div class="lead font-weight-bold">0123456789</div>
                     </div>
                 </div>
                 <div class="col-lg-4">
