--- a/views/club.ejs
+++ b/views/club.ejs
@@ -48,7 +48,7 @@
     <div class="container d-flex align-items-center flex-column">
         <!-- Masthead Avatar Image-->
 
-        <img class="masthead-avatar mb-5" src="../public/images/rotaract.png" alt="not found" />
+        <img class="masthead-avatar mb-5" src="../images/rotaract.png" alt="not found" />
         <!-- Masthead Heading-->
 
         <h1 class="masthead-heading text-uppercase mb-0" style="font-family: 'Kaushan Script', cursive;">
@@ -60,13 +60,10 @@
             <div class="divider-custom-icon"><i class="fas fa-star"></i></div>
             <div class="divider-custom-line"></div>
         </div>
-        <!-- Masthead Subheading-->
-        <!-- {% if member %} {% if notexist %} -->
-        <!-- <form action=<%= `${club.id}/approval` %> method="POST"><a method="POST" href=<%= `${club.id}/approval` %> class="btn btn-success btn-lg" style="font-family: 'Ubuntu', sans-serif;">JOIN<input type="approval" value="Employee1" /></a></form> -->
         <% if(joinbutton) { %>
-            <a href="<%=club._id%>/approval" class="btn btn-success btn-lg" style="font-family: 'Ubuntu', sans-serif;">JOIN</a>
+            <a href="<%=club._id%>/approval" class="btn btn-success btn-lg"
+                style="font-family: 'Ubuntu', sans-serif;">JOIN</a>
             <% } %>
-                <!-- <p class="masthead-subheading font-weight-light mb-0">Graphic Artist - Web Designer - Illustrator</p> -->
     </div>
 </header>
 
@@ -119,7 +116,7 @@
                     <ul class="list-group">
                         <% const acheiv=club.acheivements; for (key in acheiv) { %>
                             <li class="list-group-item">
-                                    <%= acheiv[key]%>
+                                <%= acheiv[key]%>
                             </li>
                             <% } %>
                     </ul>
@@ -145,7 +142,7 @@
             <% const obj=club.eventids; for (key in obj) { %>
                 <div class="card" style="width: 18rem;margin: 5px;min-height: max-content;">
                     <div class="card-body" style="min-height: max-content;">
-                        <img src="../public/images/rotaract.png" class="card-img-top" alt="not found"
+                        <img src="../images/rotaract.png" class="card-img-top" alt="not found"
                             style="height:100px; width:150px">
                         <h5 class="card-title">
                             <%= obj[key].name %>
@@ -156,7 +153,6 @@
                         <a class="btn btn-primary" href=<%=obj[key].link %>>Join event</a>
                     </div>
                 </div>
-                <!-- <br/>  <%= obj[key].name %>  -->
                 <% } %>
         </div>
     </div>
@@ -176,135 +172,49 @@
         <ul class="list-group">
             <% const member=club.memberids; for (key in member) { %>
                 <li class="list-group-item row">
-                    <a href="/student/<%=member[key]._id%>/profile" style="color: darkblue; font-family: 'Ubuntu', sans-serif;" class="col">
+                    <a href="/student/<%=member[key]._id%>/profile"
+                        style="color: darkblue; font-family: 'Ubuntu', sans-serif;" class="col">
                         <%= member[key].name%>
                     </a>
                     <% if(verifypresident) { %>
-                        <a class="btn btn-danger col-sm-2 offset-md-2 " href="<%=club._id%>/remove/<%=member[key]._id%>">Remove</a>
-                    <% } %>    
+                        <a class="btn btn-danger col-sm-2 offset-md-2 "
+                            href="<%=club._id%>/remove/<%=member[key]._id%>">Remove</a>
+                        <% } %>
                 </li>
                 <% } %>
         </ul>
-        <% /* %>
-            <div class="container text-center">
-                <div>
-                    <h1 style="font-family: 'Fondamento', cursive;">New Recruits</h1>
-                </div>
-                <% if(approvals.length!==0) { %>
-                    <!-- <%= approvals%> -->
+    </div>
+</section>
+<section class="page-section">
+        <% if(approvals.length!==0) { %>
+                <div class="container">
+                    <h2 class="page-section-heading text-center text-uppercase text-secondary mb-0"
+                    style="font-family: 'Kaushan Script', cursive;">New Approvals</h2>
                     <div class="divider-custom">
-                        <!-- <div>NO NEW APPLICANTS</div> -->
+                        <div class="divider-custom-line"></div>
+                        <div class="divider-custom-icon"><i class="fas fa-star"></i></div>
+                        <div class="divider-custom-line"></div>
                     </div>
 
-                    <!-- {% else %} -->
-                    <table width="100%" style="font-family: 'Frank Ruhl Libre', serif;">
-                        <col style="width:20%">
-                        <col style="width:20%">
-                        <col style="width:20%">
-                        <col style="width:20%">
-                        <col style="width:20%">
-                        <tr>
-                            <th>
-                                Name
-                            </th>
-                            <th>
-                                Email
-                            </th>
-                            <th>
-                                Action
-                            </th>
-
-                        </tr>
-
+                
+                    <ul class="list-group">
                         <% for(request in approvals){ %>
-                            <tr>
-                                <td>
-
-                                    <a href="/clubs/{{clubName}}/{{row.1}}">
-                                        <%= approvals[request].name %>
-                                    </a>
-                                </td>
-                                <td>
-                                    <a href="mailto:{{row.1}}">
-                                        <%= approvals[request].email %>
-                                    </a>
-                                </td>
-                                <!-- {% if verified %} -->
-                                <td>
-                                    <a href="/clubs/{{clubName}}/approve/{{row.1}}"
-                                        class="btn btn-success btn-sm ">Approve</a>
-                                    <a href="/clubs/{{clubName}}/reject/{{row.1}}"
-                                        class="btn btn-danger btn-sm ">Reject</a> {% if row.2 == 'U' %}
-                                    <a href="/clubs/{{clubName}}/schedule/{{row.1}}"
-                                        class="btn btn-warning btn-sm ">Schedule</a> {% else %}
-                                    <a href="/clubs/{{clubName}}/meeting/{{row.1}}"
-                                        class="btn btn-warning btn-sm ">Details</a> {% endif %}
-
-                                </td>
-
-                            </tr>
-                            <%}%>
-                                <%}%>
-
-                    </table>
-
-            </div>
-
-            <% */ %>
-                <% /* %>
-                    <div class="container text-center">
-                        <div>
-                            <h1 style="font-family: 'Fondamento', cursive;">Current Members</h1>
-                        </div>
-                        <table width="100%" style="font-family: 'Frank Ruhl Libre', serif;">
-                            <col style="width:20%">
-                            <col style="width:20%">
-                            <col style="width:20%">
-                            <col style="width:20%">
-                            <col style="width:20%">
-                            <tr>
-                                <th>
-                                    Name
-                                </th>
-                                <th>
-                                    <!-- Email -->
-                                </th>
-                                <!-- {% if verified %} -->
-                                <th>
-                                    Action
-                                </th>
-                                <!-- {% endif %} -->
-
-                            </tr>
-                            <% for(row in member) {%>
-                                <tr>
-                                    <td>
-                                        <a href="/clubs/{{clubName}}/{{row.1}}">
-                                            <%= member[row].name%>
-                                        </a>
-
-                                    </td>
-                                    <td>
-                                        <!-- <a href="mailto:{{row.1}}">
-                            {{row.1}}
-                        </a> -->
-                                    </td>
-                                    <!-- {% if verified %} -->
-                                    <% if(approvals.length!==0){ %>
-                                        <td>
-                                            <a href="/clubs/{{clubName}}/remove/{{row.1}}"
-                                                class="btn btn-danger btn-sm ">REMOVE</a>
-                                        </td>
-                                        <!-- {% endif %} -->
-                                        <% } %>
-
-                                </tr>
-                                <%} %>
-                        </table>
-                        </table>
-
-                    </div>
-                    <% */ %>
+                            <li class="list-group-item row">
+                                <a href="/student/<%= approvals[request].studentid._id %>/profile" class="col-xs-6 col-md-8"  style="color: darkblue; font-family: 'Ubuntu', sans-serif;">
+                                    <%= approvals[request].studentid.name %>
+                                </a>
+                                <div class="col-xs-6 col-md-4">
+                                <a href="/approval/<%= approvals[request]._id %>/approve"
+                                    class="btn btn-success btn-sm">Approve</a>
+                                <a href="/approval/<%= approvals[request]._id %>/meet" class="btn btn-warning btn-sm">Schedule
+                                    Meet</a>
+                                <a href="/approval/<%= approvals[request]._id %>/decline" class="btn btn-danger btn-sm">Reject</a>
+                                </div>
+                            </li>
+                            <% } %>
+                    </ul>
+                </div>
+            <% } %>
 </section>
 
 </div>
