--- a/views/club.ejs
+++ b/views/club.ejs
@@ -150,7 +150,7 @@
                         <p class="card-text">
                             <%= obj[key].description %>
                         </p>
-                        <a class="btn btn-primary" href=<%=obj[key].link %>>Join event</a>
+                        <a class="btn btn-primary" href="/event/<%=obj[key]._id%>">Join event</a>
                     </div>
                 </div>
                 <% } %>
