--- a/views/club.ejs
+++ b/views/club.ejs
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="/css/styles.css">
 </head>
 
-<% join_button=1;%>
+
 <div class="collapse navbar-collapse" id="navbarResponsive">
 
     <ul class="navbar-nav ml-auto">
@@ -60,13 +60,10 @@
             <div class="divider-custom-icon"><i class="fas fa-star"></i></div>
             <div class="divider-custom-line"></div>
         </div>
-        <!-- Masthead Subheading-->
-        <!-- {% if member %} {% if notexist %} -->
-        <!-- <form action=<%= `${club.id}/approval` %> method="POST"><a method="POST" href=<%= `${club.id}/approval` %> class="btn btn-success btn-lg" style="font-family: 'Ubuntu', sans-serif;">JOIN<input type="approval" value="Employee1" /></a></form> -->
-        <% if(join_button===0) { %>
-        <a href=<%= `${club.id}/approval`%> class="btn btn-success btn-lg" style="font-family: 'Ubuntu', sans-serif;">JOIN</a>
-        <% } %>
-        <!-- <p class="masthead-subheading font-weight-light mb-0">Graphic Artist - Web Designer - Illustrator</p> -->
+        <% if(joinbutton) { %>
+            <a href="<%=club._id%>/approval" class="btn btn-success btn-lg"
+                style="font-family: 'Ubuntu', sans-serif;">JOIN</a>
+            <% } %>
     </div>
 </header>
 
@@ -89,9 +86,7 @@
                 <div class="portfolio-item mx-auto" style="font-family: 'Ubuntu', sans-serif;">
                     <figure class="text-center">
                         <blockquote class="blockquote">
-                            <h1 class="display-4">
                                 <%= club.description %>
-                            </h1>
                         </blockquote>
                     </figure>
                 </div>
@@ -153,7 +148,7 @@
                         <p class="card-text">
                             <%= obj[key].description %>
                         </p>
-                        <a class="btn btn-primary" href="/event/<%=obj[key]._id%>">Join event</a>
+                        <a class="btn btn-primary" href=<%=obj[key].link %>>Join event</a>
                     </div>
                 </div>
                 <% } %>
@@ -172,101 +167,32 @@
             <div class="divider-custom-icon"><i class="fas fa-star"></i></div>
             <div class="divider-custom-line"></div>
         </div>
-        <ul class="list-group"></ul>
-        <% const member = club.memberids;
-                        for (key in member) { %>
-                            <li class="list-group-item">
-                                    <%= member[key].name%>
-                            </li>
-        <% } %>
-
-                    
-                </ul>
-<% /* %>
-        <div class="container text-center">
-            <div>
-                <h1 style="font-family: 'Fondamento', cursive;">New Recruits</h1>
-            </div>
-            <% if(join_button!==0) { %>
-            <!-- <%= approvals%> -->
-            <div class="divider-custom">
-                <!-- <div>NO NEW APPLICANTS</div> -->
-            </div>
-
-            <!-- {% else %} -->
-            <table width="100%" style="font-family: 'Frank Ruhl Libre', serif;">
-                <col style="width:20%">
-                <col style="width:20%">
-                <col style="width:20%">
-                <col style="width:20%">
-                <col style="width:20%">
-                <tr>
-                    <th>
-                        Name
-                    </th>
-                    <th>
-                        Email
-                    </th>
-                    <th>
-                        Action
-                    </th>
-
-                </tr>
-
-            <% for(request in approvals){ %>
-                <tr>
-                    <td>
-
-                        <a href="/clubs/{{clubName}}/{{row.1}}">
-                            <%= approvals[request].name %>
-                        </a>
-                    </td>
-                    <td>
-                        <a href="mailto:{{row.1}}">
-                            <%= approvals[request].email %>
-                        </a>
-                    </td>
-                    <!-- {% if verified %} -->
-                    <td>
-                        <a href="/clubs/{{clubName}}/approve/{{row.1}}" class="btn btn-success btn-sm ">Approve</a>
-                        <a href="/clubs/{{clubName}}/reject/{{row.1}}" class="btn btn-danger btn-sm ">Reject</a> {% if row.2 == 'U' %}
-                        <a href="/clubs/{{clubName}}/schedule/{{row.1}}" class="btn btn-warning btn-sm ">Schedule</a> {% else %}
-                        <a href="/clubs/{{clubName}}/meeting/{{row.1}}" class="btn btn-warning btn-sm ">Details</a> {% endif %}
-
-                    </td>
-                    
-                </tr>
-            <%}%>
-            <%}%>
-
-            </table>
-            
-        </div>
-
-<% */ %>
-<% /* %>
-        <div class="container text-center">
-            <div>
-                <h1 style="font-family: 'Fondamento', cursive;">Current Members</h1>
-            </div>
-            <table width="100%" style="font-family: 'Frank Ruhl Libre', serif;">
-                <col style="width:20%">
-                <col style="width:20%">
-                <col style="width:20%">
-                <col style="width:20%">
-                <col style="width:20%">
-                <tr>
-                    <th>
-                        Name
-                    </th>
-                    <th>
-                        <!-- Email -->
-                    </th>
-                    <!-- {% if verified %} -->
-                    <th>
-                        Action
-                    </th>
-                    <!-- {% endif %} -->
+        <ul class="list-group">
+            <% const member=club.memberids; for (key in member) { %>
+                <li class="list-group-item row">
+                    <a href="/student/<%=member[key]._id%>/profile"
+                        style="color: darkblue; font-family: 'Ubuntu', sans-serif;" class="col">
+                        <%= member[key].name%>
+                    </a>
+                    <% if(verifypresident) { %>
+                        <a class="btn btn-danger col-sm-2 offset-md-2 "
+                            href="<%=club._id%>/remove/<%=member[key]._id%>">Remove</a>
+                        <% } %>
+                </li>
+                <% } %>
+        </ul>
+    </div>
+</section>
+<section class="page-section">
+        <% if(approvals.length!==0) { %>
+                <div class="container">
+                    <h2 class="page-section-heading text-center text-uppercase text-secondary mb-0"
+                    style="font-family: 'Kaushan Script', cursive;">New Approvals</h2>
+                    <div class="divider-custom">
+                        <div class="divider-custom-line"></div>
+                        <div class="divider-custom-icon"><i class="fas fa-star"></i></div>
+                        <div class="divider-custom-line"></div>
+                    </div>
 
                 
                     <ul class="list-group">
@@ -275,28 +201,18 @@
                                 <a href="/student/<%= approvals[request].studentid._id %>/profile" class="col-xs-6 col-md-8"  style="color: darkblue; font-family: 'Ubuntu', sans-serif;">
                                     <%= approvals[request].studentid.name %>
                                 </a>
-
-                    </td>
-                    <td>
-                        <!-- <a href="mailto:{{row.1}}">
-                            {{row.1}}
-                        </a> -->
-                    </td>
-                    <!-- {% if verified %} -->
-                <% if(join_button!==0){ %>
-                    <td>
-                        <a href="/clubs/{{clubName}}/remove/{{row.1}}" class="btn btn-danger btn-sm ">REMOVE</a>
-                    </td>
-                    <!-- {% endif %} -->
-                    <% } %>
-
-                </tr><%}
-                %>
-            </table>
-            </table>
-
-        </div>
-        <% */ %>
+                                <div class="col-xs-6 col-md-4">
+                                <a href="/approval/<%= approvals[request]._id %>/approve"
+                                    class="btn btn-success btn-sm">Approve</a>
+                                <a href="/approval/<%= approvals[request]._id %>/meet" class="btn btn-warning btn-sm">Schedule
+                                    Meet</a>
+                                <a href="/approval/<%= approvals[request]._id %>/decline" class="btn btn-danger btn-sm">Reject</a>
+                                </div>
+                            </li>
+                            <% } %>
+                    </ul>
+                </div>
+            <% } %>
 </section>
 
 </div>
