added student edit form and some functionalities

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -12,7 +12,11 @@
 	cursor: pointer;
 	border-radius: 8px
 }
+.form-label {
 
+    display: block !important;
+
+}
 :root {
 	--blue: #007bff;
 	--indigo: #6610f2;
