some changes in update_club.ejs

--- a/views/club.ejs
+++ b/views/club.ejs
@@ -112,10 +112,10 @@
             <div class="col-md-12 col-lg-12 mb-5">
                 <div class="portfolio-item mx-auto" style="font-family: 'Ubuntu', sans-serif;">
                     <ul class="list-group">
-                        <% const acheiv=club.acheivements; for (key in acheiv) { %>
+                        <% const acheiv=club.achievements; for (key in acheiv) { %>
                             <li class="list-group-item">
                                 <%= acheiv[key]%>
-                            </li>
+                            </li><br>
                             <% } %>
                     </ul>
                 </div>
