--- a/views/student.ejs
+++ b/views/student.ejs
@@ -8,12 +8,12 @@
 		<!-- Favicon-->
 		<link
 			rel="shortcut icon"
-			href="{{ url_for('static', filename='favicon.ico') }}"
+			href="/favicon.ico"
 			type="image/x-icon"
 		/>
 		<link
 			rel="icon"
-			href="{{ url_for('static', filename='favicon.ico') }}"
+			href="/favicon.ico"
 			type="image/x-icon"
 		/>
 
