--- a/views/addEvent.ejs
+++ b/views/addEvent.ejs
@@ -26,8 +26,8 @@
             <input type="text" id="description" name="description">
         </div>
         <div>
-            <label for="banner">Upload Event Banner</label>
-            <input type="file" id="banner" name="banner">
+            <label for="Image">Upload Event Image</label>
+            <input type="file" id="Image" name="image">
         </div>
         <button type="submit" value="submit" form="addevent">Submit</button>
     </form>
