--- a/views/club.ejs
+++ b/views/club.ejs
@@ -64,6 +64,10 @@
             <a href="<%=club._id%>/approval" class="btn btn-success btn-lg"
                 style="font-family: 'Ubuntu', sans-serif;">JOIN</a>
             <% } %>
+                <% if(verifypresident) { %>
+                    <a href="<%=club._id%>/edit" class="btn btn-secondary btn-lg"
+                        style="font-family: 'Ubuntu', sans-serif;">Edit Club</a>
+                    <% } %>
     </div>
 </header>
 
@@ -86,7 +90,7 @@
                 <div class="portfolio-item mx-auto" style="font-family: 'Ubuntu', sans-serif;">
                     <figure class="text-center">
                         <blockquote class="blockquote">
-                                <%= club.description %>
+                            <%= club.description %>
                         </blockquote>
                     </figure>
                 </div>
@@ -136,23 +140,26 @@
             <div class="divider-custom-line"></div>
         </div>
         <!-- Event Grid Items-->
-        <div style="display: flex; flex-direction: row;">
+        <div class="row">
             <% const obj=club.eventids; for (key in obj) { %>
-                <div class="card" style="width: 18rem;margin: 5px;min-height: max-content;">
-                    <div class="card-body" style="min-height: max-content;">
-                        <img src="../images/rotaract.png" class="card-img-top" alt="not found"
-                            style="height:100px; width:150px">
-                        <h5 class="card-title">
+                <div class="card col col-md-4 ml-1 mr-1 mt-5">
+                    <div class="card-body">
+                        <img src="/image/<%= obj[key].image %>" class="card-img-top" alt="not found">
+                        <h5 class="card-title pt-2">
                             <%= obj[key].name %>
                         </h5>
-                        <p class="card-text">
+                        <p class="card-text mt-2">
                             <%= obj[key].description %>
                         </p>
-                        <a class="btn btn-primary" href=<%=obj[key].link %>>Join event</a>
+                        <a class="btn btn-primary" href="/event/<%=obj[key]._id %>">View</a>
                     </div>
                 </div>
                 <% } %>
         </div>
+        <% if(verifypresident) { %>
+            <a href="<%=club._id%>/event" class="mt-5 col offset-md-4 col-md-4 btn btn-secondary btn-lg"
+                style="font-family: 'Ubuntu', sans-serif;">Add Event</a>
+            <% } %>
     </div>
 </section>
 <!-- members Section-->
@@ -184,35 +191,38 @@
     </div>
 </section>
 <section class="page-section">
-        <% if(approvals.length!==0) { %>
-                <div class="container">
-                    <h2 class="page-section-heading text-center text-uppercase text-secondary mb-0"
-                    style="font-family: 'Kaushan Script', cursive;">New Approvals</h2>
-                    <div class="divider-custom">
-                        <div class="divider-custom-line"></div>
-                        <div class="divider-custom-icon"><i class="fas fa-star"></i></div>
-                        <div class="divider-custom-line"></div>
-                    </div>
+    <% if(approvals.length!==0) { %>
+        <div class="container">
+            <h2 class="page-section-heading text-center text-uppercase text-secondary mb-0"
+                style="font-family: 'Kaushan Script', cursive;">New Approvals</h2>
+            <div class="divider-custom">
+                <div class="divider-custom-line"></div>
+                <div class="divider-custom-icon"><i class="fas fa-star"></i></div>
+                <div class="divider-custom-line"></div>
+            </div>
 
-                
-                    <ul class="list-group">
-                        <% for(request in approvals){ %>
-                            <li class="list-group-item row">
-                                <a href="/student/<%= approvals[request].studentid._id %>/profile" class="col-xs-6 col-md-8"  style="color: darkblue; font-family: 'Ubuntu', sans-serif;">
-                                    <%= approvals[request].studentid.name %>
-                                </a>
-                                <div class="col-xs-6 col-md-4">
-                                <a href="/approval/<%= approvals[request]._id %>/approve"
-                                    class="btn btn-success btn-sm">Approve</a>
-                                <a href="/approval/<%= approvals[request]._id %>/meet" class="btn btn-warning btn-sm">Schedule
-                                    Meet</a>
-                                <a href="/approval/<%= approvals[request]._id %>/decline" class="btn btn-danger btn-sm">Reject</a>
-                                </div>
-                            </li>
-                            <% } %>
-                    </ul>
-                </div>
-            <% } %>
+
+            <ul class="list-group">
+                <% for(request in approvals){ %>
+                    <li class="list-group-item row">
+                        <a href="/student/<%= approvals[request].studentid._id %>/profile" class="col-xs-6 col-md-8"
+                            style="color: darkblue; font-family: 'Ubuntu', sans-serif;">
+                            <%= approvals[request].studentid.name %>
+                        </a>
+                        <div class="col-xs-6 col-md-4">
+                            <a href="/approval/<%= approvals[request]._id %>/approve"
+                                class="btn btn-success btn-sm">Approve</a>
+                            <a href="/approval/<%= approvals[request]._id %>/meet"
+                                class="btn btn-warning btn-sm">Schedule
+                                Meet</a>
+                            <a href="/approval/<%= approvals[request]._id %>/decline"
+                                class="btn btn-danger btn-sm">Reject</a>
+                        </div>
+                    </li>
+                    <% } %>
+            </ul>
+        </div>
+        <% } %>
 </section>
 
 </div>
