--- a/views/update_club.ejs
+++ b/views/update_club.ejs
@@ -24,6 +24,10 @@
     
     <div class="container mt-5 pt-5">
         <form action="/club/<%=club._id%>" id="form" method="POST" >
+            <p><input type="file"  accept="image/*" name="image" id="file"  onchange="loadFile(event)" style="display: none;"></p>
+            <p><label for="file" style="cursor: pointer;border: 2px solid red; padding: 5px; border-radius: 5px;">Upload Image</label></p>
+            <p><img id="output" width="200" /></p>
+            
             <div class="form-group">
                 <label for="info">New Description</label>
                 <textarea rows="2" type="text" class="form-control" id="info" name="description"><%=club.description%></textarea>
@@ -54,6 +58,13 @@
     <!-- <button id='add' onclick=add()>+</button><button id='add' onclick=remove()>-</button> -->
     <!-- <i class="bi bi-plus-square" id='add' onclick=add()></i> -->
 </div>
+
+<script>
+var loadFile = function(event) {
+	var image = document.getElementById('output');
+	image.src = URL.createObjectURL(event.target.files[0]);
+};
+</script>
 <script>
     add = ()=>{
         // let text=document.getElementById('achievements');
