Added event page

--- a/views/addEvent.ejs
+++ b/views/addEvent.ejs
@@ -15,7 +15,11 @@
         </div>
         <div>
             <label for="date">Event Date</label>
-            <input type="text" id="date" name="date">
+            <input type="date" id="date" name="date">
+        </div>
+        <div>
+            <label for="time">Event Time</label>
+            <input type="time" id="time" name="time">
         </div>
         <div>
             <label for="meetlink">Event Meetlink</label>
