--- a/views/home.ejs
+++ b/views/home.ejs
@@ -30,7 +30,7 @@
 
 </head>
 
-<body id="body-top">
+<body class="body-top">
 
 
 
@@ -142,7 +142,7 @@
     <section class="page-section portfolio" id="cultural">
         <div class="container">
             <!-- Portfolio Section Heading-->
-            <h2 class="page-section-heading text-center text-uppercase text-body mb-0"
+            <h2 class="page-section-heading text-center text-uppercase text-secondary mb-0"
                 style="font-family: 'Kaushan Script', cursive;">Cultural Clubs</h2>
             <!-- Icon Divider-->
             <div class="divider-custom">
@@ -156,8 +156,8 @@
                     <div class="col-md-6 col-lg-4 mb-5">
                         <a href="/club/<%=cultural._id%>">
                             <div class="portfolio-item mx-auto">
-                                <img class="img-fluid" src="https://i.imgur.com/U1cZZge.jpg" alt="">
-                                <h2 class="text-center" style="font-family: 'Ubuntu', sans-serif;">
+                                <img class="img-fluid" src="/image/<%=cultural.image%>" alt="not found">
+                                <h2 class="text-center mt-2" style="font-family: 'Ubuntu', sans-serif;">
                                     <%=cultural.name%>
                                 </h2>
                             </div>
@@ -175,7 +175,7 @@
 
         <div class="container">
             <!-- Portfolio Section Heading-->
-            <h2 class="page-section-heading text-center text-uppercase text-body mb-0"
+            <h2 class="page-section-heading text-center text-uppercase text-secondary mb-0"
                 style="font-family: 'Kaushan Script', cursive;">Technical Clubs</h2>
             <!-- Icon Divider-->
             <div class="divider-custom-line"></div>
@@ -190,8 +190,8 @@
                     <div class="col-md-6 col-lg-4 mb-5">
                         <a href="/club/<%=technical._id%>">
                             <div class="portfolio-item mx-auto">
-                                <img class="img-fluid" src="https://i.imgur.com/U1cZZge.jpg" alt="">
-                                <h2 class="text-center" style="font-family: 'Ubuntu', sans-serif;">
+                                <img class="img-fluid" src="/image/<%=technical.image%>" alt="not found">
+                                <h2 class="text-center mt-2" style="font-family: 'Ubuntu', sans-serif;">
                                     <%=technical.name%>
                                 </h2>
                             </div>
@@ -242,7 +242,7 @@
         <div class="container">
             <!-- Contact Section Heading-->
             <div class="text-center">
-                <h2 class="page-section-heading text-body d-inline-block mb-0"
+                <h2 class="page-section-heading d-inline-block text-secondary mb-0"
                     style="font-family: 'Kaushan Script', cursive;">CONTACT</h2>
             </div>
             <!-- Icon Divider-->
