some bug fixes.

--- a/views/club.ejs
+++ b/views/club.ejs
@@ -64,17 +64,12 @@
                             href="#contact" style="color:white;">CONTACT</a>
                     </li>
 
-                    <% if(joinbutton) { %>
+                    <% if(verifypresident) { %>
                         <li class="nav-item mx-0 mx-lg-1"><a
-                                class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger"
-                                href="<%=club._id%>/approval" style="color:white;">Join</a>
+                                class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="<%=club._id%>/edit"
+                                style="color:white;">Edit</a>
                         </li>
-                        <% } else if(verifypresident) { %>
-                            <li class="nav-item mx-0 mx-lg-1"><a
-                                    class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger"
-                                    href="<%=club._id%>/edit" style="color:white;">Edit</a>
-                            </li>
-                            <% } %>
+                        <% } %>
                 </ul>
 
             </div>
@@ -99,6 +94,9 @@
                 <div class="divider-custom-icon"><i class="fas fa-star"></i></div>
                 <div class="divider-custom-line"></div>
             </div>
+            <% if(joinbutton) { %>
+                <a class="btn btn-success" href="<%=club._id%>/approval">JOIN</a>
+                <% }%>
         </div>
     </header>
 
