--- a/views/scheduleInterview.ejs
+++ b/views/scheduleInterview.ejs
@@ -31,6 +31,12 @@
 					style="color: #9CC3D5;">IIITM</strong></a>
 		</div>
 	</nav>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
 
 	<h2 class="page-section-heading text-center text-uppercase text-secondary mb-0"
 		style="font-family: 'Kaushan Script', cursive;">Schedule interview of <%= approval.studentid.name %>
@@ -42,10 +48,10 @@
 		<div class="divider-custom-line"></div>
 	</div>
 	<div class="container">
-		<form action="/approval/<%=approval._id %>/meet" method="POST">
+		<form action="/approval/<%=approval._id %>/meet" method="POST" enctype="multipart/form-data">
 			<div class="form-group">
 				<label for="time">TIME</label>
-				<input type="text" class="form-control" id="alarm" name="time" value="" placeholder="" required />
+				<input type="text" class="form-control" id="time" name="time" value="" placeholder="" required />
 			</div>
 			<div class="form-group">
 				<label for="date">DATE</label>
