--- a/views/edit_events.ejs
+++ b/views/edit_events.ejs
@@ -53,31 +53,31 @@
             <div class="divider-custom-line"></div>
         </div>
 
-        <form method="POST" action="/club/<%=club._id %>/event">
+        <form method="POST" action="/event/<%=event._id %>/">
             <div class="form-group">
                 <label for="name" class="form-label">Name of Event</label>
-                <input type="text" class="form-control" id="name" name="name" required>
+                <input type="text" class="form-control" id="name" name="name" value="<%=event.name%>" required>
             </div>
 
             <div class="form-group">
                 <label for="date" class="form-label">Date of Event</label>
-                <input type="date" class="form-control" id="date" name="date" required>
+                <input type="date" class="form-control" id="date" value="<%=event.date.getDate()%>/<%=event.date.getMonth()%>/<%=event.date.getFullYear()%>" name="date" required>
             </div>
 
             <div class="form-group">
                 <label for="time" class="form-label">Time of Event</label>
-                <input type="time" class="form-control" id="time" name="time" required>
+                <input type="time" class="form-control" id="time" value="<%=event.date.getHours()%>:<%=event.date.getMinutes()%>:<%=event.date.getSeconds()%> (IST)" name="time" required>
             </div>
 
             <div class="form-group">
                 <label for="meetlink" class="form-label">Meetlink</label>
-                <input type="text" class="form-control" id="meetlink" name="meetlink" required>
+                <input type="text" class="form-control" id="meetlink" value="<%=event.meetlink%>" name="meetlink" required>
             </div>
 
 
             <div class="form-group">
                 <label for="description" class="form-label">Description of Event</label>
-                <input type="text" class="form-control" id="description" name="description" required>
+                <input type="text" class="form-control" id="description" value="<%=event.description%>" name="description" required>
             </div>
 
             <div class="form-group">
@@ -87,7 +87,7 @@
                 <input type="file" name="image" id="image" onchange="loadFile(event)" style="display: none">
             </div>
             <div class="form-group">
-                <img id="output" width="600px">
+                <img src="/image/<%=event.image%>" id="output" width="600px">
             </div>
 
             <button type="submit" class="btn btn-primary">Submit</button>
