--- a/views/editstudent.ejs
+++ b/views/editstudent.ejs
@@ -54,7 +54,7 @@
             <div class="divider-custom-line"></div>
         </div>
 
-        <form method="POST" action="/student/<%=student._id %>" enctype="multipart/form-data">
+        <form method="POST" action="/student/<%=student._id %>">
             <div class="form-group">
                 <label for="full_name" class="form-label">Full Name</label>
                 <input type="text" class="form-control" id="full_name" name="full_name" value="<%=student.name%>"
