--- a/views/student.ejs
+++ b/views/student.ejs
@@ -23,6 +23,7 @@
 	</div>
 	<link rel="stylesheet" type="text/css"
 		href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" />
+
 	<!-- Google font -->
 	<style>
 		body {
@@ -34,62 +35,91 @@
 </head>
 
 <body>
-	<div class="col mt-3 text-center">
-		<div class="container h5">
-			<div class="container font-weight-bold d-4">
-				<%=student.bio%>
+	<% if(message.length> 0) {%>
+		<div class="container fixed-top">
+			<% if(status==200) {%>
+				<div class="alert alert-success alert-dismissible fade show" role="alert">
+					<%} else {%>
+						<div class="alert alert-danger alert-dismissible fade show" role="alert">
+							<%}%>
+								<%= message%>
+									<button type="button" class="close" data-dismiss="alert" aria-label="Close">
+										<span aria-hidden="true">&times;</span>
+									</button>
+						</div>
+				</div>
+		</div>
+		<%}%>
+			<div class="col mt-3 text-center">
+				<div class="container h5">
+					<div class="container font-weight-bold d-4">
+						<%=student.bio%>
+					</div>
+					<div class="text-center font-weight-light">- <%=student.name%>
+					</div>
+				</div>
+
+				<div class="mt-4 h4">
+					<span class="font-weight-bold">Email Address:</span>
+					<a href="mailto:<%=student.email%>">
+						<%=student.email%>
+					</a>
+				</div>
+
+				<div class="mt-4 h4">
+					<span class="font-weight-bold">LinkedIn:</span>
+					<a href="https://www.linkedin.com/in/<%=student.linkedin%>">
+						<%=student.linkedin%>
+					</a>
+				</div>
+
+				<div class="mt-4 h4">
+					<span class="font-weight-bold mr-2">Branch:</span>
+					<%=student.branch%>
+				</div>
+
+				<div class="mt-4 h4">
+					<span class="font-weight-bold mr-2">Roll No.:</span>
+					<%=student.rollNo%>
+				</div>
+
+				<div class="mt-4 h4">
+					<span class="font-weight-bold mr-2">Contact No.:</span>
+					<%=student.phoneno%>
+				</div>
+
+				<div class="mt-4 h4">
+					<span class="font-weight-bold mr-2">Batch:</span>
+					<%=student.batch%>
+				</div>
+
+				<% if(isCurrStudent) {%>
+
+					<a href="edit" class="mt-5 btn btn-primary btn-lg">
+						<i class="fas fa-edit"></i>
+						Edit Profile
+					</a>
+
+					<a href="/logout" class="mt-5 btn btn-danger btn-lg">
+						<i class="fas fa-sign-out-alt"></i>
+						Logout
+					</a>
+					<% } %>
 			</div>
-			<div class="text-center font-weight-light">- <%=student.name%>
-			</div>
-		</div>
 
-		<div class="mt-4 h4">
-			<span class="font-weight-bold">Email Address:</span>
-			<a href="mailto:<%=student.email%>">
-				<%=student.email%>
-			</a>
-		</div>
+			
+			<!-- Bootstrap core JS-->
+			<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+			<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.bundle.min.js"></script>
+			<!-- Third party plugin JS-->
+			<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.min.js"></script>
 
-		<div class="mt-4 h4">
-			<span class="font-weight-bold">LinkedIn:</span>
-			<a href="https://www.linkedin.com/in/<%=student.linkedin%>">
-				<%=student.linkedin%>
-			</a>
-		</div>
 
-		<div class="mt-4 h4">
-			<span class="font-weight-bold mr-2">Branch:</span>
-			<%=student.branch%>
-		</div>
 
-		<div class="mt-4 h4">
-			<span class="font-weight-bold mr-2">Roll No.:</span>
-			<%=student.rollNo%>
-		</div>
-
-		<div class="mt-4 h4">
-			<span class="font-weight-bold mr-2">Contact No.:</span>
-			<%=student.phoneno%>
-		</div>
-
-		<div class="mt-4 h4">
-			<span class="font-weight-bold mr-2">Batch:</span>
-			<%=student.batch%>
-		</div>
-
-		<% if(isCurrStudent) {%>
-
-			<a href="edit" class="mt-5 btn btn-primary btn-lg">
-				<i class="fas fa-edit"></i>
-				Edit Profile
-			</a>
-
-			<a href="/logout" class="mt-5 btn btn-danger btn-lg">
-				<i class="fas fa-sign-out-alt"></i>
-				Logout
-			</a>
-			<% } %>
-	</div>
+			<script src="/js/scripts.js"></script>
+			<script src="/js/main.js"></script>
+			<script src="/js/bootstrap-notify.min.js"></script>
+			<script src="/js/notify.js"></script>
 </body>
 
 </html>
