--- a/views/update_club.ejs
+++ b/views/update_club.ejs
@@ -20,6 +20,23 @@
         </div>
     </nav>
 
+    <% if(message.length > 0) {%>
+    <header class="masthead bg-primary text-white text-center" id="page-top">
+        <div class="container fixed-top">
+            <% if(status == 200) {%>
+            <div class="alert alert-success alert-dismissible fade show" role="alert">
+            <%} else {%>
+            <div class="alert alert-danger alert-dismissible fade show" role="alert">
+            <%}%>
+                <%= message%>
+                <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+        </div>
+    </header>
+    <%}%>
+
     <div class="container mt-5 pt-5">
         <h2 class="page-section-heading text-center text-uppercase text-secondary mt-5"
             style="font-family: 'Kaushan Script', cursive;">Edit <%= club.name%>
